oya/production-planning/iac/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oya-production-planning
  labels:
    app: oya-production-planning
    sap-code: "PP"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oya-production-planning
  template:
    metadata:
      labels:
        app: oya-production-planning
    spec:
      containers:
        - name: service
          image: registry.example/oya-production-planning:0.1.0
          ports:
            - name: h3
              containerPort: 8443
